# clustering-pipeline

./: LICENSE  README.md  pyproject.toml  requirements.txt  session_store.db  stats.json
conf/base/: catalog.yml  parameters_music_recommendation.yml
data/06_models/: pipe_music_recommendation.joblib  pipeline.joblib
notebooks/: 1.0_music_recommendation.ipynb
notebooks/.ipynb_checkpoints/: 1.0_music_recommendation-checkpoint.ipynb
src/clustering_pipeline/: __init__.py  __main__.py
src/clustering_pipeline/pipelines/music_recommendation/: __init__.py  nodes.py  pipeline.py
src/tests/pipelines/music_recommendation/: test_pipeline.py
