[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "clustering_pipeline"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
clustering-pipeline = "clustering_pipeline.__main__:main"

[tool.kedro]
package_name = "clustering_pipeline"
project_name = "clustering-pipeline"
kedro_init_version = "0.19.2"
tools = [ "Data Structure", "Kedro Viz",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "clustering_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
